istio-example/tomcat/svc-tomcat.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc
spec:
  selector:
    service: tomcat
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: svc-tomcat-v1
spec:
  selector:
    app: tomcat-v1
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: svc-tomcat-v2
spec:
  selector:
    app: tomcat-v2
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
