istio-example/tomcat/dr-tomcat.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dr-tomcat
spec:
  host: tomcat-svc.tomcat.svc.cluster.local
  subsets:
  - name: v1
    labels:
      app: tomcat-v1
  - name: v2
    labels:
      app: tomcat-v2
