istio-example/tomcat/vs-tomcat-80-20.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-tomcat-80-20
spec:
  hosts:
  - "*"
  gateways:
  - gateway-tomcat
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: tomcat-svc
        subset: v1
        port:
          number: 80
      weight: 80
    - destination:
        host: tomcat-svc
        subset: v2
        port:
          number: 80
      weight: 20
